src/io/cloudchaser/murmur/parser/MurmurParser.java
// Generated from C:\Users\Mihail\Documents\NetBeansProjects\Murmur\src\grammar\MurmurParser.g4 by ANTLR 4.4
package io.cloudchaser.murmur.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MurmurParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LeftParenElement=53, ModuleKeyword=61, TernaryConditionOperator=43, LineComment=73, 
		ThisKeyword=65, BinaryXorOperator=12, CommaOperator=13, EqualsOperator=27, 
		ColonElement=45, LogicalAndOperator=34, Identifier=71, RightParenElement=54, 
		CompoundRightShiftOperator=22, ITypeKeyword=59, TypeKeyword=67, BinaryAndOperator=9, 
		IntegerLiteral=1, CompoundSubtractOperator=23, BlockComment=74, ContinueKeyword=57, 
		CompoundAddOperator=14, ThrowKeyword=66, CompoundBinaryOrOperator=16, 
		StringLiteral=5, LessOrEqualOperator=32, NotEqualsOperator=39, GreaterOrEqualOperator=28, 
		RightBraceElement=50, NullLiteral=6, SuperKeyword=64, ProtectedKeyword=69, 
		CompoundBinaryAndOperator=15, CompoundModuloOperator=20, SemicolonElement=46, 
		AddOperator=7, BooleanLiteral=3, ModuloOperator=37, LeftBracketElement=51, 
		LeftArrowElement=47, Whitespace=72, BinaryOrOperator=11, PrivateKeyword=68, 
		ReturnKeyword=63, MultiplyOperator=38, AssertKeyword=55, DivideOperator=25, 
		RightArrowElement=48, DecimalLiteral=2, TernaryIterativeOperator=44, DecrementOperator=24, 
		RightShiftOperator=41, RightBracketElement=52, BreakKeyword=56, PublicKeyword=70, 
		LogicalNotOperator=35, CompoundLeftShiftOperator=19, GreaterThanOperator=29, 
		CompoundMultiplyOperator=21, AssignOperator=8, LeftBraceElement=49, LetKeyword=60, 
		NewKeyword=62, LessThanOperator=33, SubtractOperator=42, ImportKeyword=58, 
		CompoundBinaryXorOperator=17, DotOperator=26, IncrementOperator=30, BinaryNotOperator=10, 
		LogicalOrOperator=36, LeftShiftOperator=31, RangeOperator=40, CompoundDivideOperator=18, 
		CharacterLiteral=4;
	public static final String[] tokenNames = {
		"<INVALID>", "IntegerLiteral", "DecimalLiteral", "BooleanLiteral", "CharacterLiteral", 
		"StringLiteral", "'null'", "'+'", "'='", "'&'", "'~'", "'|'", "'^'", "','", 
		"'+='", "'&='", "'|='", "'^='", "'/='", "'<<='", "'%='", "'*='", "'>>='", 
		"'-='", "'--'", "'/'", "'.'", "'=='", "'>='", "'>'", "'++'", "'<<'", "'<='", 
		"'<'", "'&&'", "'!'", "'||'", "'%'", "'*'", "'!='", "'..'", "'>>'", "'-'", 
		"'?'", "'@'", "':'", "';'", "'<-'", "'->'", "'{'", "'}'", "'['", "']'", 
		"'('", "')'", "'assert'", "'break'", "'continue'", "'import'", "'itype'", 
		"'let'", "'module'", "'new'", "'return'", "'super'", "'this'", "'throw'", 
		"'type'", "'private'", "'protected'", "'public'", "Identifier", "Whitespace", 
		"LineComment", "BlockComment"
	};
	public static final int
		RULE_compilationUnit = 0, RULE_statement = 1, RULE_keywordStatement = 2, 
		RULE_block = 3, RULE_typeStatement = 4, RULE_typeDeclaration = 5, RULE_typeElement = 6, 
		RULE_iTypeStatement = 7, RULE_iTypeDeclaration = 8, RULE_iTypeElement = 9, 
		RULE_identifierList = 10, RULE_initializerElement = 11, RULE_initializerList = 12, 
		RULE_expressionList = 13, RULE_expression = 14, RULE_lambda = 15, RULE_literal = 16;
	public static final String[] ruleNames = {
		"compilationUnit", "statement", "keywordStatement", "block", "typeStatement", 
		"typeDeclaration", "typeElement", "iTypeStatement", "iTypeDeclaration", 
		"iTypeElement", "identifierList", "initializerElement", "initializerList", 
		"expressionList", "expression", "lambda", "literal"
	};

	@Override
	public String getGrammarFileName() { return "MurmurParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MurmurParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CompilationUnitContext extends ParserRuleContext {
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MurmurParserVisitor ) return ((MurmurParserVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IntegerLiteral) | (1L << DecimalLiteral) | (1L << BooleanLiteral) | (1L << CharacterLiteral) | (1L << StringLiteral) | (1L << NullLiteral) | (1L << AddOperator) | (1L << BinaryNotOperator) | (1L << DecrementOperator) | (1L << IncrementOperator) | (1L << LogicalNotOperator) | (1L << SubtractOperator) | (1L << LeftArrowElement) | (1L << RightArrowElement) | (1L << LeftBraceElement) | (1L << LeftBracketElement) | (1L << LeftParenElement) | (1L << BreakKeyword) | (1L << ContinueKeyword) | (1L << LetKeyword) | (1L << ReturnKeyword))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (SuperKeyword - 64)) | (1L << (ThisKeyword - 64)) | (1L << (ThrowKeyword - 64)) | (1L << (Identifier - 64)))) != 0)) {
				{
				{
				setState(34); statement();
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TypeStatementContext typeStatement() {
			return getRuleContext(TypeStatementContext.class,0);
		}
		public ITypeStatementContext iTypeStatement() {
			return getRuleContext(ITypeStatementContext.class,0);
		}
		public KeywordStatementContext keywordStatement() {
			return getRuleContext(KeywordStatementContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MurmurParserVisitor ) return ((MurmurParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(56);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(40); typeStatement();
				setState(42);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(41); match(SemicolonElement);
					}
					break;
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(44); iTypeStatement();
				setState(46);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(45); match(SemicolonElement);
					}
					break;
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(48); keywordStatement();
				setState(50);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(49); match(SemicolonElement);
					}
					break;
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(52); expression(0);
				setState(54);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(53); match(SemicolonElement);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeywordStatementContext extends ParserRuleContext {
		public Token operator;
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public InitializerListContext initializerList() {
			return getRuleContext(InitializerListContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public KeywordStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keywordStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MurmurParserVisitor ) return ((MurmurParserVisitor<? extends T>)visitor).visitKeywordStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KeywordStatementContext keywordStatement() throws RecognitionException {
		KeywordStatementContext _localctx = new KeywordStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_keywordStatement);
		int _la;
		try {
			setState(76);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				((KeywordStatementContext)_localctx).operator = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==BreakKeyword || _la==ContinueKeyword) ) {
					((KeywordStatementContext)_localctx).operator = (Token)_errHandler.recoverInline(this);
				}
				consume();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(59); ((KeywordStatementContext)_localctx).operator = match(ReturnKeyword);
				setState(61);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(60); expression(0);
					}
					break;
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(63); ((KeywordStatementContext)_localctx).operator = match(ThrowKeyword);
				setState(64); expression(0);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(65); ((KeywordStatementContext)_localctx).operator = match(LetKeyword);
				setState(66); initializerList();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(67); ((KeywordStatementContext)_localctx).operator = match(LetKeyword);
				setState(68); identifierList();
				setState(69); match(RightArrowElement);
				setState(70); expression(0);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(72); ((KeywordStatementContext)_localctx).operator = match(LeftArrowElement);
				setState(73); identifierList();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(74); ((KeywordStatementContext)_localctx).operator = match(RightArrowElement);
				setState(75); identifierList();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MurmurParserVisitor ) return ((MurmurParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); match(LeftBraceElement);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IntegerLiteral) | (1L << DecimalLiteral) | (1L << BooleanLiteral) | (1L << CharacterLiteral) | (1L << StringLiteral) | (1L << NullLiteral) | (1L << AddOperator) | (1L << BinaryNotOperator) | (1L << DecrementOperator) | (1L << IncrementOperator) | (1L << LogicalNotOperator) | (1L << SubtractOperator) | (1L << LeftArrowElement) | (1L << RightArrowElement) | (1L << LeftBraceElement) | (1L << LeftBracketElement) | (1L << LeftParenElement) | (1L << BreakKeyword) | (1L << ContinueKeyword) | (1L << LetKeyword) | (1L << ReturnKeyword))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (SuperKeyword - 64)) | (1L << (ThisKeyword - 64)) | (1L << (ThrowKeyword - 64)) | (1L << (Identifier - 64)))) != 0)) {
				{
				{
				setState(79); statement();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85); match(RightBraceElement);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeStatementContext extends ParserRuleContext {
		public Token name;
		public Token Identifier;
		public List<Token> parents = new ArrayList<Token>();
		public List<TerminalNode> Identifier() { return getTokens(MurmurParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(MurmurParser.Identifier, i);
		}
		public TypeDeclarationContext typeDeclaration() {
			return getRuleContext(TypeDeclarationContext.class,0);
		}
		public TypeStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MurmurParserVisitor ) return ((MurmurParserVisitor<? extends T>)visitor).visitTypeStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeStatementContext typeStatement() throws RecognitionException {
		TypeStatementContext _localctx = new TypeStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typeStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); ((TypeStatementContext)_localctx).name = match(Identifier);
			setState(88); match(AssignOperator);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(89); ((TypeStatementContext)_localctx).Identifier = match(Identifier);
				((TypeStatementContext)_localctx).parents.add(((TypeStatementContext)_localctx).Identifier);
				setState(90); match(AddOperator);
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(96); typeDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDeclarationContext extends ParserRuleContext {
		public List<TypeElementContext> typeElement() {
			return getRuleContexts(TypeElementContext.class);
		}
		public TypeElementContext typeElement(int i) {
			return getRuleContext(TypeElementContext.class,i);
		}
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDeclaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MurmurParserVisitor ) return ((MurmurParserVisitor<? extends T>)visitor).visitTypeDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDeclarationContext typeDeclaration() throws RecognitionException {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); match(TypeKeyword);
			setState(99); match(LeftBraceElement);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ThisKeyword || _la==Identifier) {
				{
				{
				setState(100); typeElement();
				setState(102);
				_la = _input.LA(1);
				if (_la==SemicolonElement) {
					{
					setState(101); match(SemicolonElement);
					}
				}

				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109); match(RightBraceElement);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeElementContext extends ParserRuleContext {
		public Token name;
		public TerminalNode Identifier() { return getToken(MurmurParser.Identifier, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TypeElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeElement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MurmurParserVisitor ) return ((MurmurParserVisitor<? extends T>)visitor).visitTypeElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeElementContext typeElement() throws RecognitionException {
		TypeElementContext _localctx = new TypeElementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typeElement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			((TypeElementContext)_localctx).name = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==ThisKeyword || _la==Identifier) ) {
				((TypeElementContext)_localctx).name = (Token)_errHandler.recoverInline(this);
			}
			consume();
			setState(114);
			_la = _input.LA(1);
			if (_la==AssignOperator) {
				{
				setState(112); match(AssignOperator);
				setState(113); expression(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ITypeStatementContext extends ParserRuleContext {
		public Token name;
		public Token Identifier;
		public List<Token> parents = new ArrayList<Token>();
		public List<TerminalNode> Identifier() { return getTokens(MurmurParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(MurmurParser.Identifier, i);
		}
		public ITypeDeclarationContext iTypeDeclaration() {
			return getRuleContext(ITypeDeclarationContext.class,0);
		}
		public ITypeStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iTypeStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MurmurParserVisitor ) return ((MurmurParserVisitor<? extends T>)visitor).visitITypeStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ITypeStatementContext iTypeStatement() throws RecognitionException {
		ITypeStatementContext _localctx = new ITypeStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_iTypeStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); ((ITypeStatementContext)_localctx).name = match(Identifier);
			setState(117); match(AssignOperator);
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(118); ((ITypeStatementContext)_localctx).Identifier = match(Identifier);
				((ITypeStatementContext)_localctx).parents.add(((ITypeStatementContext)_localctx).Identifier);
				setState(119); match(AddOperator);
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(125); iTypeDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ITypeDeclarationContext extends ParserRuleContext {
		public ITypeElementContext iTypeElement(int i) {
			return getRuleContext(ITypeElementContext.class,i);
		}
		public List<ITypeElementContext> iTypeElement() {
			return getRuleContexts(ITypeElementContext.class);
		}
		public ITypeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iTypeDeclaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MurmurParserVisitor ) return ((MurmurParserVisitor<? extends T>)visitor).visitITypeDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ITypeDeclarationContext iTypeDeclaration() throws RecognitionException {
		ITypeDeclarationContext _localctx = new ITypeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_iTypeDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); match(ITypeKeyword);
			setState(128); match(LeftBraceElement);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(129); iTypeElement();
				setState(131);
				_la = _input.LA(1);
				if (_la==SemicolonElement) {
					{
					setState(130); match(SemicolonElement);
					}
				}

				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138); match(RightBraceElement);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ITypeElementContext extends ParserRuleContext {
		public Token name;
		public TerminalNode Identifier() { return getToken(MurmurParser.Identifier, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public ITypeElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iTypeElement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MurmurParserVisitor ) return ((MurmurParserVisitor<? extends T>)visitor).visitITypeElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ITypeElementContext iTypeElement() throws RecognitionException {
		ITypeElementContext _localctx = new ITypeElementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_iTypeElement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140); ((ITypeElementContext)_localctx).name = match(Identifier);
			setState(141); match(AssignOperator);
			setState(142); match(LeftParenElement);
			setState(144);
			_la = _input.LA(1);
			if (_la==Identifier) {
				{
				setState(143); identifierList();
				}
			}

			setState(146); match(RightParenElement);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierListContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(MurmurParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(MurmurParser.Identifier, i);
		}
		public IdentifierListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MurmurParserVisitor ) return ((MurmurParserVisitor<? extends T>)visitor).visitIdentifierList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierListContext identifierList() throws RecognitionException {
		IdentifierListContext _localctx = new IdentifierListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_identifierList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(148); match(Identifier);
			setState(153);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(149); match(CommaOperator);
					setState(150); match(Identifier);
					}
					} 
				}
				setState(155);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
